[gd_scene load_steps=15 format=3 uid="uid://b1x6e0bi4gjo0"]

[ext_resource type="Script" path="res://scenes/Entities/Passive/Firefly/Firefly.gd" id="1_pi4ac"]
[ext_resource type="PackedScene" uid="uid://yoivdmkuokl0" path="res://scenes/Entities/Utils/VelocityComponent.tscn" id="2_56n36"]
[ext_resource type="Texture2D" uid="uid://cv25og8ck8v4y" path="res://assets/Firefly/Firefly.png" id="3_kken1"]
[ext_resource type="Shape2D" uid="uid://d1gaxyn4r0efc" path="res://scenes/Entities/Passive/Firefly/FireflyCollisionShape.tres" id="4_bqaxv"]
[ext_resource type="Script" path="res://scenes/Entities/Passive/Firefly/FireflyIdleState.gd" id="4_g8xe2"]
[ext_resource type="Script" path="res://scenes/Entities/Passive/Firefly/FireflyRunningFromEntityState.gd" id="5_q35lm"]
[ext_resource type="PackedScene" uid="uid://iynkceabfekf" path="res://scenes/Objects/LavityLight.tscn" id="5_y4je2"]
[ext_resource type="Script" path="res://scenes/Entities/Passive/Firefly/FireflyStateMachine.gd" id="6_b7k3y"]
[ext_resource type="Theme" uid="uid://dkc02dgojmkxd" path="res://scenes/Ui/Theme/MainUi.tres" id="9_r8v3q"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_15xc2"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_dkeon"]
interpolation_mode = 2
colors = PackedColorArray(0.60183, 0.60183, 0.60183, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c02me"]
gradient = SubResource("Gradient_dkeon")
width = 10
height = 10
fill = 1
fill_from = Vector2(0.5, 0.525641)
fill_to = Vector2(0.777778, 0.213675)

[sub_resource type="SpriteFrames" id="SpriteFrames_cab34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kken1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cc5c7"]
radius = 481.067

[node name="Firefly" type="CharacterBody2D"]
collision_layer = 41
collision_mask = 49
script = ExtResource("1_pi4ac")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_15xc2")
amount = 4
lifetime = 3.0
speed_scale = 7.36
explosiveness = 0.06
randomness = 0.09
texture = SubResource("GradientTexture2D_c02me")
emission_shape = 1
emission_sphere_radius = 33.59
direction = Vector2(-1, 0)
spread = 4.47
gravity = Vector2(0, 0)
initial_velocity_max = 37.27

[node name="FireflyCollisionShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = ExtResource("4_bqaxv")

[node name="FireflyStateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("6_b7k3y")
initialState = NodePath("idleState")

[node name="idleState" type="Node" parent="FireflyStateMachine"]
script = ExtResource("4_g8xe2")

[node name="runningFromEntityState" type="Node" parent="FireflyStateMachine"]
script = ExtResource("5_q35lm")

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("Entity") instance=ExtResource("2_56n36")]
Entity = NodePath("..")
speedMultiplier = 30
airResistance = 2

[node name="FlippingSprite" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_cab34")

[node name="PerceptionArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptionArea"]
shape = SubResource("CircleShape2D_cc5c7")

[node name="LavityLight" parent="." instance=ExtResource("5_y4je2")]
scale = Vector2(0.25, 0.25)

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = -119.0
offset_top = 6.0
offset_right = 145.0
offset_bottom = 106.0
theme = ExtResource("9_r8v3q")
theme_override_font_sizes/font_size = 70
text = "State"
